--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.20.0",
+    "material-ui-dropzone": "^2.4.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
