--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -6,9 +6,11 @@
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
+    "chart.js": "^2.9.3",
     "http-proxy-middleware": "^0.20.0",
     "material-ui-dropzone": "^2.4.7",
     "react": "^16.12.0",
+    "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
