--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -8,12 +8,14 @@
     "axios": "^0.19.0",
     "chart.js": "^2.9.3",
     "http-proxy-middleware": "^0.20.0",
+    "js-file-download": "^0.4.8",
     "material-ui-dropzone": "^2.4.7",
     "react": "^16.12.0",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-share": "^3.0.1",
     "react-spinners": "^0.6.1",
     "styled-components": "^4.4.1"
   },
