--- a/backend_flask/requirements.txt
+++ b/backend_flask/requirements.txt
@@ -1,22 +1,34 @@
 astroid==2.3.3
 autopep8==1.4.4
+awscli==1.16.298
+boto3==1.10.34
+botocore==1.13.34
 Click==7.0
+colorama==0.4.1
+docutils==0.15.2
 Flask==1.1.1
+Flask-S3==0.3.3
 gunicorn==20.0.2
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.3
+jmespath==0.9.4
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
 numpy==1.17.4
 pandas==0.25.3
+pyasn1==0.4.8
 pycodestyle==2.5.0
 pylint==2.4.4
-python-dateutil==2.8.1
+python-dateutil==2.8.0
 python-dotenv==0.10.3
 pytz==2019.3
+PyYAML==5.1.2
+rsa==3.4.2
+s3transfer==0.2.1
 six==1.13.0
 typed-ast==1.4.0
+urllib3==1.25.7
 Werkzeug==0.16.0
 wrapt==1.11.2
